--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,8 +45,7 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
-    <link href="https://cdn.bootcss.com/KaTeX/0.10.0-alpha/katex.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/KaTeX/0.10.0-alpha/katex.min.js"></script>
-    <script src="https://cdn.bootcss.com/KaTeX/0.10.0-alpha/contrib/auto-render.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-alpha/katex.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-alpha/katex.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0-alpha/contrib/auto-render.min.js"></script>
 </head>
