--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -183,6 +183,27 @@ layout: default
                         </ul>
                     </div>
                 </section>
+
+
+<head>
+    <title>Live2D</title>
+    <link rel="stylesheet" type="text/css" href="https://files.cnblogs.com/files/victorique/waifu1.css"/>
+    <script src="https://blog-static.cnblogs.com/files/victorique/qaq.js"></script>
+</head>
+<body>
+    <link rel="stylesheet" type="text/css" href="https://files.cnblogs.com/files/victorique/waifu1.css">
+    <div class="waifu" id="waifu">
+        <div class="waifu-tips" style="opacity: 0;"></div>
+        <canvas id="live2d" width="280" height="450" class="live2d"></canvas>
+    </div>
+    <script src="https://files.cnblogs.com/files/victorique/live2d1.js"></script>
+    <script src="https://files.cnblogs.com/files/victorique/waifu-tips1.js"></script>
+    <script type="text/javascript">loadlive2d("live2d", "https://blog-static.cnblogs.com/files/victorique/loadlive2d.js");</script> 
+</body>
+
+
+
+                
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
