--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -261,7 +261,7 @@ layout: default
      
       <script type="text/javascript">
         var gitment = new Gitment({
-			  id: 'DieSheep',
+			  id: 'Dispwnl',
 			  title: '<%= page.title %>',
 			  owner: 'A-Failure',
 			  repo: 'A-Failure.github.io',
