--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,6 +16,10 @@ layout: default
         </div>
     </div>
 </header>
+<div id="search-container">
+  <input type="text" id="search-input" placeholder="search...">
+  <ul id="results-container"></ul>
+</div>
 <!-- Main Content -->
 <div class="container">
 	<div class="row">
