--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -277,7 +277,8 @@ layout: default
 	<script src="https://jjeejj.github.io/js/gitment.js"></script>
 	<script>
 	var gitment = new Gitment({
-    	owner: 'A-Failure',
+    	id: '<%= page.title %>',
+	owner: 'A-Failure',
     	repo: 'A-Failure.github.io',
     	oauth: {
         	client_id: 'cbb307ff7e24206d1f4e',
